<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/data_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/enter_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:clickable="false"
            android:enabled="false"
            android:text="@string/data_screen"
            android:textAlignment="center"
            android:textSize="20sp"
            android:background="@color/purple_500"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/count_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enter_data"
            android:layout_marginTop="450sp"
            android:clickable="true"
            android:focusable="auto"
            android:nestedScrollingEnabled="false"
            android:text="@string/count_button" />

        <EditText
            android:id="@+id/enter_term"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/enter_data"
            android:layout_marginTop="50sp"
            android:ems="10"
            android:hint="@string/enter_term"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColorHint="@color/purple_200" />

        <EditText
            android:id="@+id/enter_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/enter_term"
            android:layout_marginTop="50sp"
            android:ems="10"
            android:hint="@string/enter_rate"
            android:inputType="number|numberDecimal"
            android:textAlignment="center"
            android:textColorHint="@color/purple_200" />

        <EditText
            android:id="@+id/enter_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/enter_rate"
            android:layout_marginTop="50sp"
            android:ems="10"
            android:hint="@string/enter_payment"
            android:inputType="number|numberPassword"
            android:textAlignment="center"
            android:textColorHint="@color/purple_200" />
    </RelativeLayout>


</FrameLayout>